# dupfinder

./: README.md  pyproject.toml
src/dup_finder/: main.py
src/dup_finder/pdfjs/web/locale/: locale.json
