[project]
name = "dup-finder"
version = "0.1.0"
description = "Find duplicated / near-duplicated content in a PDF (chunk, paragraph, sentence, and seed-and-extend growing-window levels)"
requires-python = ">=3.10"
dependencies = [
    "pdfplumber>=0.11",
    "rapidfuzz>=3.9",
    "datasketch>=1.6",
    "pypdfium2>=4.30",
]

[project.scripts]
dupfind = "dup_finder.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dup_finder"]
